--- a/charts/templates/cluster.yaml
+++ b/charts/templates/cluster.yaml
@@ -143,7 +143,8 @@ spec:
       # Add additional hostnames or IPv4/IPv6 addresses as Subject Alternative Names on the server TLS cert
       # tls-san: []
 
-    # machineSelectorConfig:
+    machineSelectorConfig:
+{{ toYaml .Values.rke.machineSelectorConfig | indent 6 }}
     # - config:
         # Node name
         # node-name: ""
