--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -34,6 +34,17 @@ rke:
 # clusterMembers:
 # - principalName: "local://u-z8zl5"
 #   roleTemplateName: "cluster-member"
+  registries:
+    # configs:
+    #   {}
+    #   authConfigSecretName: string
+    #      caBundle: string
+    #      insecureSkipVerify: boolean
+    #      tlsSecretName: string
+    # mirrors:
+    #   '*':
+    #     endpoint:
+    #       - https://registry.example.com
 
 # enable monitoring
 monitoring:
