vapp property should be a list

--- a/charts/templates/nodeconfig-vsphere.yaml
+++ b/charts/templates/nodeconfig-vsphere.yaml
@@ -41,7 +41,8 @@ sshUserGroup: {{ $nodepool.sshUserGroup }}
 tag: {{ $nodepool.tag }}
 vappIpallocationpolicy: {{ $nodepool.vappIpallocationpolicy }}
 vappIpprotocol: {{ $nodepool.vappIpprotocol }}
-vappProperty: {{ $nodepool.vappProperty }}
+vappProperty: 
+{{ toYaml $nodepool.vappProperty | indent 4 }}
 vappTransport: {{ $nodepool.vappTransport }}
 vcenter: {{ $nodepool.vcenter }}
 vcenterPort: {{ $nodepool.vcenterPort | quote }}
@@ -90,7 +91,8 @@ sshUserGroup: {{ $nodepool.sshUserGroup }}
 tag: {{ $nodepool.tag }}
 vappIpallocationpolicy: {{ $nodepool.vappIpallocationpolicy }}
 vappIpprotocol: {{ $nodepool.vappIpprotocol }}
-vappProperty: {{ $nodepool.vappProperty }}
+vappProperty: 
+{{ toYaml $nodepool.vappProperty | indent 4 }}
 vappTransport: {{ $nodepool.vappTransport }}
 vcenter: {{ $nodepool.vcenter }}
 vcenterPort: {{ $nodepool.vcenterPort }}
