--- a/charts/values-vsphere.yaml
+++ b/charts/values-vsphere.yaml
@@ -135,6 +135,9 @@ nodepools:
 
   # vSphere vApp properties
   # vappProperty: []
+  # - guestinfo.interface.0.ip.0.address=ip:vLan100_K8S
+  # - guestinfo.interface.0.ip.0.netmask=${netmask:vLan100_K8S}
+  # - guestinfo.interface.0.route.0.gateway=${gateway:vLan100_K8S}
 
   # 'vSphere OVF environment transports to use for properties. Supported values are: iso and com.vmware.guestInfo'
   # vappTransport: ""
